--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </style>
 </head>
 <body>
+	hey hey hey
 <canvas id="canvas"></canvas>
 <script>
     window.addEventListener('DOMContentLoaded', function() {
