--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     	shadowGenerator.blurKernel = 32;
 
         // Model by Mixamo
-        BABYLON.SceneLoader.ImportMesh("", "", "Xbot.glb", scene, function (newMeshes) {
+        BABYLON.SceneLoader.ImportMesh("", "./scenes/", "Xbot.glb", scene, function (newMeshes) {
             shadowGenerator.addShadowCaster(scene.meshes[0], true);
             for (var index = 0; index < newMeshes.length; index++) {
                 newMeshes[index].receiveShadows = false;;
