--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <script src="https://cdn.babylonjs.com/babylon.max.js"></script>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>BS_Gallery_test1</title>
     <style>
         #canvas {
             width:100%;
