--- a/index.html
+++ b/index.html
@@ -1,62 +1,66 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <script src="https://cdn.babylonjs.com/babylon.max.js"></script>
-    <meta charset="UTF-8">
-    <title>BS_Gallery_test1</title>
-    <style>
-        #canvas {
-            width:100%;
-            height:100%;
-        }
-    </style>
-</head>
-<body>
-<canvas id="canvas"></canvas>
-<script>
-    window.addEventListener('DOMContentLoaded', function() {
-        var canvas = document.getElementById('canvas');
+<html xmlns="http://www.w3.org/1999/xhtml">
 
-        var engine = new BABYLON.Engine(canvas, true);
-        var createScene = function() {
-            var scene = new BABYLON.Scene(engine);
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+        <title>Babylon Template</title>
 
+        <style>
+            html, body {
+                overflow: hidden;
+                width: 100%;
+                height: 100%;
+                margin: 0;
+                padding: 0;
+            }
 
-        // Camera
-    	var camera = new BABYLON.ArcRotateCamera("camera1", Math.PI / 2, Math.PI / 4, 3, new BABYLON.Vector3(0, 1, 0), scene);
-	    camera.attachControl(canvas, true);
-	    camera.lowerRadiusLimit = 2;
-	    camera.upperRadiusLimit = 10;
-	    camera.wheelDeltaPercentage = 0.01;
+            #renderCanvas {
+                width: 100%;
+                height: 100%;
+                touch-action: none;
+            }
+        </style>
 
-        	// Lights
-	    var light = new BABYLON.HemisphericLight("light1", new BABYLON.Vector3(0, 1, 0), scene);
-	    light.intensity = 0.6;
-	    light.specular = BABYLON.Color3.Black();
+        <script src="https://cdn.babylonjs.com/babylon.js"></script>
+        <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
+        <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
+    </head>
 
-        var light2 = new BABYLON.DirectionalLight("dir01", new BABYLON.Vector3(0, -0.5, -1.0), scene);
-    	light2.position = new BABYLON.Vector3(0, 5, 5);
+   <body>
 
-        	// Shadows
-    	var shadowGenerator = new BABYLON.ShadowGenerator(1024, light2);
-    	shadowGenerator.useBlurExponentialShadowMap = true;
-    	shadowGenerator.blurKernel = 32;
+    <canvas id="renderCanvas" touch-action="none"></canvas> <!-- touch-action="none" for best results from PEP -->
 
+    <script>
+        const canvas = document.getElementById("renderCanvas"); // Get the canvas element
+        const engine = new BABYLON.Engine(canvas, true); // Generate the BABYLON 3D engine
 
-            scene.clearColor = new BABYLON.Color3.White();
-            var camera = new BABYLON.FreeCamera('camera1', new BABYLON.Vector3(0, 0,-10), scene);
-            camera.setTarget(BABYLON.Vector3.Zero());
+        // Add your code here matching the playground format
+        const createScene = function () {
+    
+            const scene = new BABYLON.Scene(engine);  
 
-            var box = BABYLON.Mesh.CreateBox("Box",4.0,scene);
+            BABYLON.SceneLoader.ImportMeshAsync("", "https://assets.babylonjs.com/meshes/", "box.babylon");
+
+            const camera = new BABYLON.ArcRotateCamera("camera", -Math.PI / 2, Math.PI / 2.5, 15, new BABYLON.Vector3(0, 0, 0));
+            camera.attachControl(canvas, true);
+            const light = new BABYLON.HemisphericLight("light", new BABYLON.Vector3(1, 1, 0));
 
             return scene;
-        }
+        };
 
-        var scene = createScene();
-        engine.runRenderLoop(function(){
-            scene.render();
+        const scene = createScene(); //Call the createScene function
+
+        // Register a render loop to repeatedly render the scene
+        engine.runRenderLoop(function () {
+                scene.render();
         });
-    });
-</script>
-</body>
+
+        // Watch for browser/canvas resize events
+        window.addEventListener("resize", function () {
+                engine.resize();
+        });
+    </script>
+
+   </body>
+
 </html>
