--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 
             const groundMat = new BABYLON.Standard.Material("groundMat");
-            groundMat.diffuseColor = new BABYLON.Color3(0.19, 0.32, 0.05)
+            groundMat.diffuseColor = new BABYLON.Color3(0.19, 0.32, 0.05);
 
 
             //BABYLON.SceneLoader.ImportMeshAsync("box", "./scenes/", "box.babylon");
