--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
             const groundMat = new BABYLON.StandardMaterial("groundMat");
             groundMat.diffuseColor = new BABYLON.Color3(0.16, 0.29, 0.03);
-            const roofMat = new BABYLON.StandardMaterial("roofMat");
-            roofMat.diffuseTexture = new BABYLON.texture("./textures/roof_T.jpg");
+            //const roofMat = new BABYLON.StandardMaterial("roofMat");
+            //roofMat.diffuseTexture = new BABYLON.texture("./textures/roof_T.jpg");
             const boxMat = new BABYLON.StandardMaterial("boxMat");
             boxMat.diffuseTexture = new BABYLON.texture("./textures/floor.png");
 
