--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             box.material = boxMat;
             box.position.y = 0.5;
             const roof = BABYLON.MeshBuilder.CreateCylinder("roof", {diameter: 1.3, height: 1.2, tessellation: 3});
-            roof.material = roofMat;
+            //roof.material = roofMat;
             roof.scaling.x = 0.75;
             roof.rotation.z = Math.PI / 2;
             roof.position.y = 1.22;
