--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
             groundMat.diffuseColor = new BABYLON.Color3(0.16, 0.29, 0.03);
             //const roofMat = new BABYLON.StandardMaterial("roofMat");
             //roofMat.diffuseTexture = new BABYLON.texture("./textures/roof_T.jpg");
-            const boxMat = new BABYLON.StandardMaterial("boxMat");
-            boxMat.diffuseTexture = new BABYLON.texture("./textures/floor.png");
+            //const boxMat = new BABYLON.StandardMaterial("boxMat");
+            //boxMat.diffuseTexture = new BABYLON.texture("./textures/floor.png");
 
 
             //BABYLON.SceneLoader.ImportMeshAsync("box", "./scenes/", "box.babylon");
             const box = BABYLON.MeshBuilder.CreateBox("box", {});
-            box.material = boxMat;
+            //box.material = boxMat;
             box.position.y = 0.5;
             const roof = BABYLON.MeshBuilder.CreateCylinder("roof", {diameter: 1.3, height: 1.2, tessellation: 3});
             //roof.material = roofMat;
