--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
             const groundMat = new BABYLON.StandardMaterial("groundMat");
             groundMat.diffuseColor = new BABYLON.Color3(0.16, 0.29, 0.03);
-            //const roofMat = new BABYLON.StandardMaterial("roofMat");
-            //roofMat.diffuseTexture = new BABYLON.texture("./textures/roof_T.jpg");
+            const roofMat = new BABYLON.StandardMaterial("roofMat");
+            roofMat.diffuseTexture = new BABYLON.texture("./textures/roof_T.jpg");
             //const boxMat = new BABYLON.StandardMaterial("boxMat");
             //boxMat.diffuseTexture = new BABYLON.texture("./textures/floor.png");
 
@@ -58,7 +58,7 @@
             //box.material = boxMat;
             box.position.y = 0.5;
             const roof = BABYLON.MeshBuilder.CreateCylinder("roof", {diameter: 1.3, height: 1.2, tessellation: 3});
-            //roof.material = roofMat;
+            roof.material = roofMat;
             roof.scaling.x = 0.75;
             roof.rotation.z = Math.PI / 2;
             roof.position.y = 1.22;
