--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             const groundMat = new BABYLON.StandardMaterial("groundMat");
             groundMat.diffuseColor = new BABYLON.Color3(0.16, 0.29, 0.03);
             const roofMat = new BABYLON.StandardMaterial("roofMat");
-            roofMat.diffuseTexture = new BABYLON.texture("./textures/roof_T.jpg");
+            roofMat.diffuseTexture = new BABYLON.texture("https://github.com/BSGallery1/Gallery/tree/main/textures/roof_T.jpg");
             //const boxMat = new BABYLON.StandardMaterial("boxMat");
             //boxMat.diffuseTexture = new BABYLON.texture("./textures/floor.png");
 
