--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             const box = BABYLON.MeshBuilder.CreateBox("box", {width: 2, faceUV: faceUV, wrap: true});
             box.material = boxMat;
             box.position.y = 0.5;
-            const roof = BABYLON.MeshBuilder.CreateCylinder("roof", {diameter: 1.3, height: 1.2, tessellation: 3});
+            const roof = BABYLON.MeshBuilder.CreateCylinder("roof", {diameter: 1.3, height: 1.2, tessellation: 3, wrap: true});
             roof.material = roofMat;
             roof.scaling.x = 0.75;
             roof.scaling.y = 2;
