--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             groundMat.diffuseColor = new BABYLON.Color3(0.16, 0.29, 0.03);
             
             const roofMat = new BABYLON.StandardMaterial("roofMat");
-            roofMat.diffuseTexture = new BABYLON.Texture("./textures/roof_T.jpg", scene);
+            roofMat.diffuseTexture = new BABYLON.Texture("./textures/roof_Tv2.jpg", scene);
             const boxMat = new BABYLON.StandardMaterial("boxMat");
             boxMat.diffuseTexture = new BABYLON.Texture("./textures/semihouse_T.png", scene);
 
