--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         const engine = new BABYLON.Engine(canvas, true); // Generate the BABYLON 3D engine
 
         // Add your code here matching the playground format
-        const createScene = function () {
+        const createScene =  () => {
             
             const scene = new BABYLON.Scene(engine);  
 
@@ -76,7 +76,7 @@
 
 
             return scene;
-        };
+        }
 
         const scene = createScene(); //Call the createScene function
 
