--- a/index.html
+++ b/index.html
@@ -44,26 +44,14 @@
             const light = new BABYLON.HemisphericLight("light", new BABYLON.Vector3(1, 1, 0));
 
             const ground = buildGround();
-
+            const box = buildBox();
+            
             const roofMat = new BABYLON.StandardMaterial("roofMat");
             roofMat.diffuseTexture = new BABYLON.Texture("./textures/roof_Tv2.jpg", scene);
-            const boxMat = new BABYLON.StandardMaterial("boxMat");
-            boxMat.diffuseTexture = new BABYLON.Texture("./textures/semihouse_T.png", scene);
-
+   
 
             const music = new BABYLON.Sound("Eno1", "./Audio/Eno1.mp3", scene, null, { loop: true, autoplay: true});
 
-            const faceUV = [];
-            faceUV[0] = new BABYLON.Vector4(0.6, 0.0, 1.0, 1.0);
-            faceUV[1] = new BABYLON.Vector4(0.0, 0.0, 0.4, 1.0);
-            faceUV[2] = new BABYLON.Vector4(0.4, 0, 0.6, 1.0);
-            faceUV[3] = new BABYLON.Vector4(0.4, 0, 0.6, 1.0);
-
-
-            //BABYLON.SceneLoader.ImportMeshAsync("box", "./scenes/", "box.babylon");
-            const box = BABYLON.MeshBuilder.CreateBox("box", {width: 2, faceUV: faceUV, wrap: true});
-            box.material = boxMat;
-            box.position.y = 0.5;
             const roof = BABYLON.MeshBuilder.CreateCylinder("roof", {diameter: 1.3, height: 1.2, tessellation: 3, wrap: true});
             roof.material = roofMat;
             roof.scaling.x = 0.75;
@@ -80,6 +68,23 @@
             groundMat.diffuseColor = new BABYLON.Color3(0.16, 0.29, 0.03);
             const ground = BABYLON.MeshBuilder.CreateGround("ground", {width:10, height:10});
             ground.material = groundMat;
+        }
+
+        const buildBox = () => {
+            const boxMat = new BABYLON.StandardMaterial("boxMat");
+            boxMat.diffuseTexture = new BABYLON.Texture("./textures/semihouse_T.png", scene);
+            const faceUV = [];
+            faceUV[0] = new BABYLON.Vector4(0.6, 0.0, 1.0, 1.0);
+            faceUV[1] = new BABYLON.Vector4(0.0, 0.0, 0.4, 1.0);
+            faceUV[2] = new BABYLON.Vector4(0.4, 0, 0.6, 1.0);
+            faceUV[3] = new BABYLON.Vector4(0.4, 0, 0.6, 1.0);
+
+
+            const box = BABYLON.MeshBuilder.CreateBox("box", {width: 2, faceUV: faceUV, wrap: true});
+            box.material = boxMat;
+            box.position.y = 0.5;
+
+            return box;
         }
         const scene = createScene(); //Call the createScene function
 
