--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <canvas id="renderCanvas" touch-action="none"></canvas> <!-- touch-action="none" for best results from PEP -->
 
     <script>
+        import { Engine } from '@babylonjs/core/Engines/engine'
+        
         const canvas = document.getElementById("renderCanvas"); // Get the canvas element
         const engine = new BABYLON.Engine(canvas, true); // Generate the BABYLON 3D engine
 
