--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         const engine = new BABYLON.Engine(canvas, true); // Generate the BABYLON 3D engine
 
         // Add your code here matching the playground format
-        const createScene =  () => {
+        const createScene = function() {
             
             const scene = new BABYLON.Scene(engine);  
 
